# uniprot-cli

./: .gitignore  README.md  pyproject.toml  uniprot-cli-0.1.0.r12.g8da440e-1-any.pkg.tar.zst
.github/workflows/: ci.yml  release-drift.yml  release.yml
config/: default-config.toml
src/uniprot_cli/: __init__.py  __main__.py  cache.py  client.py  core.py  docs.py  metadata.py  surface.py
src/uniprot_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/uniprot_cli/specs/: aa.openapi.json  idmapping.openapi.json  proteomes.openapi.json  support-data.openapi.json  uniparc.openapi.json  uniprotkb.openapi.json  uniref.openapi.json
tests/: test_uniprot_cli.py  test_uniprot_client.py  test_uniprot_docs.py
